vault/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    kubernetes.io/metadata.name: vault
